# ai-api-observability-platform

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: pom.xml
backend/analytics-service/: pom.xml
backend/analytics-service/src/main/resources/: application.yml
backend/auth-service/: pom.xml
backend/auth-service/src/main/resources/: application.yml
backend/dashboard-service/: pom.xml
backend/gateway-service/: pom.xml
backend/gateway-service/src/main/resources/: application.yml
backend/metrics-collector/: pom.xml
backend/registry-service/: pom.xml
backend/shared/common-dto/: pom.xml
backend/shared/common-events/: pom.xml
backend/shared/common-exceptions/: pom.xml
backend/shared/common-security/: pom.xml
backend/shared/common-utils/: pom.xml
db/migrations/: V1__users_and_services.sql  V2__api_logs.sql  V3__metrics_partitioned.sql  V4__alerts_predictions_ml_results.sql  V5__seed_admin_user.sql  V6__seed_gateway_fallback_service.sql
deploy/docker/: backend-service.Dockerfile  ml-service.Dockerfile
deploy/k8s/: README.md
deploy/k8s/base/: kustomization.yaml  namespace.yaml
deploy/k8s/overlays/local/: kustomization.yaml
docs/: architecture.md
docs/api-contracts/: backend-openapi.yaml  kafka-events.md  ml-service-openapi.yaml
frontend/: README.md  app.js  index.html  style.css
ml-service/: README.md  pyproject.toml
ml-service/app/: __init__.py  config.py  main.py  schemas.py
ml-service/app/clients/: __init__.py  metrics.py
ml-service/app/features/: __init__.py  pipeline.py
ml-service/app/kafka/: __init__.py  producer.py
ml-service/app/modules/alerts/: router.py  train.py
ml-service/app/modules/anomaly/: router.py  train.py
ml-service/app/modules/failure/: router.py  train.py
ml-service/app/modules/health/: router.py
ml-service/app/modules/traffic/: router.py  train.py
ml-service/app/training/: __init__.py  cli.py  registry.py
ml-service/tests/: test_stubs.py
synthetic-data/: README.md  pyproject.toml
synthetic-data/synthetic_data/: __init__.py  cli.py  config.py  generator.py  writer.py
(+58 files in other folders)
