[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-service"
version = "0.1.0"
description = "FastAPI ML subsystem for the API Performance Analytics Platform"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",              # calls to Analytics Service
    "confluent-kafka>=2.5.0",     # predictions producer
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "joblib>=1.4.0",
    "python-json-logger>=2.0.7",
    "prometheus-client>=0.20.0",
    "apscheduler>=3.10.0",        # periodic retraining
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "httpx>=0.27.0",
    "types-requests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
