[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthetic-data"
version = "0.1.0"
description = "Synthetic API telemetry generator for the analytics platform"
requires-python = ">=3.11"

dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "ruff>=0.6.0"]

[project.scripts]
synth = "synthetic_data.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["synthetic_data*"]

[tool.ruff]
line-length = 100
target-version = "py311"
